Bug 1154478 - Really force-enable the event-regions code when APZ is enabled. r=tn